# particles

./: .gitignore  CMakeLists.txt
input/: cube3.yaml  cube5.yaml  diamond.yaml  lovers.yaml  octagon.yaml
src/: auxiliary_math.hpp  particle.cpp  particle.hpp  run  run.cpp  simulation.cpp  simulation.hpp  vec3D.cpp  vec3D.hpp
src/SimulationConfig/: simulationconfig.cpp  simulationconfig.hpp
